# sas-libclient

./: .arcconfig  .clang-format  .envrc  CMakeLists.txt  CODEOWNERS  README.md  avro_table_writer.cpp  avro_table_writer.hpp  avro_write_extern.h  build_and_test.sh  chunk_extern.h  chunk_queue.cpp  chunk_queue.hpp  client_config.h  hdat_read_extern.h  hdat_write_extern.h  parallel_read.cpp  parallel_read.hpp  result_table_reader.cpp  result_table_reader.hpp  s2_client.cpp  s2_client.hpp  s2_client_error.hpp  s2_client_extern.h  s2_connection.cpp  s2_connection.hpp  table_writer.cpp  table_writer.hpp  thread_safe_queue.hpp  tsv_table_writer.cpp  tsv_table_writer.hpp  utils.cpp  utils.hpp
.github/workflows/: release.yml  test.yml
docker/: Dockerfile  build_in_docker.sh
hdat/: chunk_reader.cpp  chunk_reader.hpp  chunk_writer.cpp  chunk_writer.hpp  common.hpp  super_chunk.cpp  super_chunk.hpp
libmariadb/: libmariadb.so.3
libmariadb/include/: mariadb_version.h
libmysql/: my_config.h  mysql_version.h
queue/: chunk_queue.hpp  chunks_info.hpp  multi_pass_queue.cpp  multi_pass_queue.hpp  streaming_queue.cpp  streaming_queue.hpp  thread_safe_batch_queue.hpp  thread_safe_queue.hpp  thread_safe_simple_queue.hpp
scripts/: build-in-docker.sh  s2-docker.sh  test-in-docker.sh
test/: data_types_test.c  db_creds.h  hdat_test.cpp  helpers.h  information_schema_test.c  multi_and_random_test.c  multi_pass_test.c  parallel_read_test.c  prepare_s2.sql  query_test.c  random_read_test.c  run_test_inf.sh  superchunk.sql  thread_safe_batch_queue_test.cpp  thread_safe_queue_test.cpp  time_test.c  write_internal_test.cpp  write_test.c  write_test.cpp  write_test_small.cpp  write_timing_test.cpp
